syntax = "proto3";

package dg.model;

//-识别类型，1为车辆识别（机动车，非机动车，行人），2为人脸识别，3为先进行车辆识别，然后对车辆识别得到的对象进行人脸识别
enum RecognizeType {
    REC_TYPE_INVALID = 0;
    REC_TYPE_VEHICLE = 1;
    REC_TYPE_FACE = 2;
    REC_TYPE_ALL = 3;
}

enum RankType {
    RANK_TYPE_DEFAULT = 0;
    RANK_TYPE_VEHICLE = 1;
    RANK_TYPE_FACE = 2;
}

//-识别的功能代码
enum RecognizeFunctions {
    RECFUNC_INVALID = 0;

    RECFUNC_VEHICLE_DETECT = 100;
    RECFUNC_MOTOR_STYLE = 101;
    RECFUNC_MOTOR_COLOR = 102;
    RECFUNC_MOTOR_MARKER = 103;
    RECFUNC_MOTOR_PLATE = 104;
    RECFUNC_MOTOR_FEATURE = 105;
    RECFUNC_MOTOR_DRIVER_BELT = 106;
    RECFUNC_MOTOR_DRIVER_PHONE = 107;
    RECFUNC_MOTOR_CODRIVER_BELT = 108;
    RECFUNC_MOTOR_DANGEROUS_ARTICLES_DETECT = 109;

    RECFUNC_FACE_DETECT = 200;
    RECFUNC_FACE_ALIGNMENT = 201;
    RECFUNC_FACE_QUALITY_LV1 = 202;
    RECFUNC_FACE_QUALITY_LV2 = 203;
    RECFUNC_FACE_FEATURE = 204;
    RECFUNC_FACE_ATTRIBUTE = 205;
    
    RECFUNC_PEDESTRIAN_ATTRIBUTE = 300;
    RECFUNC_PEDESTRIAN_FEATURE = 301;
    
    RECFUNC_NON_MOTOR_ATTRIBUTE = 400;
}

message Time {
    int64 Seconds = 1;
    int64 NanoSecs = 2;
}
message MatrixError {
    int32 Code = 1;
    string Message = 2;
}